--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,38 +1,59 @@
-<button type="button" class="btn btn-primary btn-lg btn-block">New order</button>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>CustomerID</th>
-      <th>ProductID</th>
-      <th>Amount</th>
-      <th>Status</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let order of orderList | async">
-      <td>{{ order.id }}</td>
-      <td>{{ order.customerID }}</td>
-      <td>{{ order.productID }}</td>
-      <td>{{ order.amount }}</td>
-      <td>{{ order.status }}</td>
-      <td>
-        <div class="btn-group">
-          <button class="btn btn-info">
-            <i class="fa fa-edit"></i>
-          </button>
-          <button class="btn btn-info">
-            <i class="fa fa-refresh"></i>
-          </button>
-          <button class="btn btn-info">
-            <i class="fa fa-trash"></i>
-          </button>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container col-10 offset-1">
+  <h3 class="mb-3">Orders</h3>
+</div>
+
+<div class="input-group mb-3 col-10 offset-1">
+
+  <!-- <div class="form-group">
+  <label for=""></label>
+  <select
+    [(ngModel)]="phraseKey" class="custom-select">
+    <option *ngFor="let order of orderList | async" [value]="order.key">
+    {{ order.key }}</option>
+  </select>
+</div> -->
+
+
+  <div class="input-group-prepend">
+    <span class="input-group-text" id="basic-addon1">Filter</span>
+  </div>
+  <input [(ngModel)]="txt" class="form-control" type="text" placeholder="search...">
+</div>
 
 
 
+<div class="container col-10 offset-1">
+  <button type="button" class="btn btn-primary btn-lg btn-block">New order</button>
+  <table class="table thead-dark table-hover table-striped">
+    <thead>
+      <tr>
+        <th class="text-center">#</th>
+        <th class="text-center">CustomerID</th>
+        <th class="text-center">ProductID</th>
+        <th class="text-center">Amount</th>
+        <th class="text-center">Status</th>
+        <th class="text-center">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let order of orderList | async | orderFilter:txt:phraseKey">
+        <td class="text-center">{{ order.id }}</td>
+        <td class="text-center">{{ order.customerID }}</td>
+        <td class="text-center">{{ order.productID }}</td>
+        <td class="text-center">{{ order.amount }}</td>
+        <td class="text-center">{{ order.status }}</td>
+        <td class="text-center">
+          <div class="btn-group">
+            <button class="btn btn-info">
+              <i class="fa fa-edit"></i>
+            </button>
+            <button class="btn btn-danger">
+              <i class="fa fa-trash"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
