--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,10 +1,6 @@
-        <div class="container-fluid">
-          <div class="copyright float-right">
-            &copy;
-            <script>
-              document.write(new Date().getFullYear())
-
-            </script>, made with <i class="material-icons">favorite</i> by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-          </div>
-        </div>
+<div class="container-fluid">
+  <div class="copyright float-right">
+    &copy;2021, made with <i class="material-icons">favorite</i> by
+    <a href="https://www.training360.com" target="_blank">Teamgular</a> for a better web.
+  </div>
+</div>
