--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,89 +1,122 @@
-<!-- <div class="row searchFilter">
-  <div class="col-sm-12">
-    <div class="input-group">
-      <input id="table_filter" type="text" class="form-control" aria-label="Text input with segmented button dropdown">
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false"><span class="label-icon">Category</span> <span
-            class="caret">&nbsp;</span></button>
-        <div class="dropdown-menu dropdown-menu-right">
-          <ul class="category_filters">
-            <li>
-              <input class="cat_type category-input" data-label="All" id="all" value="" name="radios"
-                type="radio"><label for="all">All</label>
-            </li>
-            <li>
-              <input type="radio" name="radios" id="Design" value="Design"><label class="category-label"
-                for="Design">Design</label>
-            </li>
-            <li>
-              <input type="radio" name="radios" id="Marketing" value="Marketing"><label class="category-label"
-                for="Marketing">Marketing</label>
-            </li>
-            <li>
-              <input type="radio" name="radios" id="Programming" value="Programming"><label class="category-label"
-                for="Programming">Programming</label>
-            </li>
-            <li>
-              <input type="radio" name="radios" id="Sales" value="Sales"><label class="category-label"
-                for="Sales">Sales</label>
-            </li>
-            <li>
-              <input type="radio" name="radios" id="Support" value="Support"><label class="category-label"
-                for="Support">Support</label>
-            </li>
-          </ul>
-        </div>
-        <button id="searchBtn" type="button" class="btn btn-secondary btn-search"><span
-            class="glyphicon glyphicon-search">&nbsp;</span> <span class="label-icon">Search</span></button>
-      </div>
+<div class="row">
+  <div class="col-12 col-lg-10 col-xl-9">
+    <div class="btn-group d-flex flex-wrap">
+      <button (click)="onSelectChanged($event)" value="id" class="btn btn-info filter-selector">ID</button>
+      <button (click)="onSelectChanged($event)" value="name" class="btn btn-info active filter-selector">Name</button>
+      <button (click)="onSelectChanged($event)" value="catId" class="btn btn-info filter-selector">CatId</button>
+      <button (click)="onSelectChanged($event)" value="type" class="btn btn-info filter-selector">Type</button>
+      <button (click)="onSelectChanged($event)" value="description" class="btn btn-info filter-selector">Desc</button>
+      <button (click)="onSelectChanged($event)" value="price" class="btn btn-info filter-selector">Price</button>
+      <button (click)="onFlagSelect($event)" value="featured" class="btn btn-info filter-selector">Feat
+        <input class="align-text-top flag-filter" disabled type="checkbox">
+      </button>
+      <button (click)="onFlagSelect($event)" value="active" class="btn btn-info filter-selector">Active
+        <input class="align-text-top flag-filter" disabled type="checkbox">
+      </button>
     </div>
   </div>
-</div> -->
-<form class="navbar-form">
-
-</form>
-<div class="col-10 offset-1">
-  <div class="input-group no-border">
-    <input type="text" value="" class="form-control" placeholder="Search...">
-    <button type="submit" class="btn btn-white btn-round btn-just-icon">
-      <i class="material-icons">search</i>
-      <div class="ripple-container"></div>
-    </button>
+  <div class="col-12 col-md-8 col-lg-6 col-xl-3 mt-2">
+    <div class="input-group no-border">
+      <input #searchInput id="searchInput" type="text" value="" class="form-control mr-sm-2 my-1"
+        placeholder="Search..." (keyup)="onSearch(searchInput.value)" (search)="onSearch(searchInput.value)"
+        [disabled]=isFlagFilter>
+      <button type="submit" (click)="onSearch(searchInput.value)"
+        class="btn btn-white btn-round btn-just-icon btn-search" [disabled]=isFlagFilter>
+        <i class="material-icons">search</i>
+        <div class="ripple-container"></div>
+      </button>
+    </div>
   </div>
-
-  <!-- <input
-  (keyup)="onChangePhrase($event)"
-  (search)="onChangePhrase($event)"
-    class="form-control mr-sm-2 my-1"
-    type="search"
-    placeholder="Search by Name"
-    aria-label="Search" > -->
-  <p><em>Click on column names to sort data in ascending order</em></p>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Name</th>
-        <th>CategoryId</th>
-        <th>Type</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Featured</th>
-        <th>Active</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let product of products | async">
-        <td>{{ product.id }}</td>
-        <td>{{ product.name }}</td>
-        <td>{{ product.catId }}</td>
-        <td>{{ product.type }}</td>
-        <td>{{ product.description }}</td>
-        <td>{{ product.price }}</td>
-        <td>{{ product.featured }}</td>
-        <td>{{ product.active }}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="col-12 mb-2">
+    <p class="mb-0"><em>Select number of products on the page</em></p>
+    <div class="btn-group d-flex flex-wrap">
+      <button (click)="setPageSize($event)" value="10" class="btn btn-light page-size">10</button>
+      <button (click)="setPageSize($event)" value="20" class="btn btn-light page-size">20</button>
+      <button (click)="setPageSize($event)" value="50" class="btn btn-light active page-size">50</button>
+      <button (click)="setPageSize($event)" value="100" class="btn btn-light page-size">100</button>
+      <button (click)="setPageSize($event)" value="200" class="btn btn-light page-size">200</button>
+      <button (click)="setPageSize($event)" value="-1" class="btn btn-light page-size">All</button>
+    </div>
+  </div>
+  <div class="col-12">
+    <div class="table-responsive">
+      <table class="table table-striped table-sm table-product">
+        <thead class="thead-dark text-center">
+          <tr>
+            <th (click)="onColumnSelect('id')" class="table-product__th--id">Id
+              <i *ngIf="sortColumn !== 'id'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'id' && !sortDesc" class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'id' && sortDesc" class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('name')" class="table-product__th--name">Name
+              <i *ngIf="sortColumn !== 'name'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'name' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'name' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('catId')" class="table-product__th--catId">CatId
+              <i *ngIf="sortColumn !== 'catId'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'catId' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'catId' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="table-product__th--cat">Category</th>
+            <th (click)="onColumnSelect('type')" class="table-product__th--type">Type
+              <i *ngIf="sortColumn !== 'type'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'type' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'type' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('description')" class="table-product__th--desc">Description
+              <i *ngIf="sortColumn !== 'description'"
+                class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'description' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'description' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('price')" class="table-product__th--price">Price
+              <i *ngIf="sortColumn !== 'price'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'price' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'price' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('featured')" class="table-product__th--feat">Featured
+              <i *ngIf="sortColumn !== 'featured'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'featured' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'featured' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th (click)="onColumnSelect('active')" class="table-product__th--active">Active
+              <i *ngIf="sortColumn !== 'active'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="sortColumn === 'active' && !sortDesc"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="sortColumn === 'active' && sortDesc"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of products | async">
+            <td>{{ product.id }}</td>
+            <td>{{ product.name }}</td>
+            <td class="text-center">{{ product.catId }}</td>
+            <td class="text-center">{{ categories.get(product.catId) }}</td>
+            <td class="text-center">{{ product.type }}</td>
+            <td>{{ product.description }}</td>
+            <td class="text-right">{{ product.price }}</td>
+            <td class="text-right">{{ product.featured }}</td>
+            <td class="text-right">{{ product.active }}</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
