--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -9,20 +9,21 @@
             </select>
             <input class="form-control searchInput py-1 my-1" #search type="text" value="" class="form-control"
                 placeholder="Search..." [(ngModel)]="phrase">
-            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                <i class="material-icons">search</i>
-                <div class="ripple-container"></div>
-            </button>
+            <!-- <button [disabled]="this.isSearchButtonVisible" type="submit" class="btn btn-white btn-round btn-just-icon"> -->
+            <i class="material-icons">search</i>
+            <!--       <div class="ripple-container"></div>
+            </button> -->
         </div>
         <div class="col-12 my-2">
-            <button class="btn btn-success w-100 py-6 my-3">
+            <!--  <button class="btn btn-success w-100 py-6 my-3">
                 <i class="material-icons">
                     person_add
                 </i>
-            </button>
+            </button> -->
             <table class="table table-striped">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>FirstName</th>
                         <th>LastName</th>
                         <th>Email</th>
@@ -36,6 +37,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let customer of customerList$ | async | customerFilter:filterKey:phrase">
+                        <td>{{ customer.id }}</td>
                         <td>{{ customer.first_name }}</td>
                         <td>{{ customer.last_name }}</td>
                         <td>{{ customer.email }}</td>
@@ -47,17 +49,18 @@
                         <td>{{ customer.active }}</td>
                         <td>
                             <div class="btn-group">
-                                <button class="btn btn-info px-3 mr-1">
+                                <!--  <button class="btn btn-info px-3 mr-1">
                                     <i class="material-icons">
                                         mode_edit
                                     </i>
                                 </button>
-                                <button (click)="removeCustomer(customer.id)" class="btn btn-danger px-3 ml-1">
+                                <button [disabled] (click)="removeCustomer(customer.id)"
+                                    class="btn btn-danger px-3 ml-1">
                                     <!-- [routerLink]="['']" -->
-                                    <i class="material-icons">
+                                <!--      <i class="material-icons">
                                         delete_forever
                                     </i>
-                                </button>
+                                </button> -->
                             </div>
                         </td>
                     </tr>
