--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-  <div class="container-fluid">
+  <div class="container-fluid navbar-toggler">
     <div class="navbar-wrapper">
-      <!-- <a class="navbar-brand" href="javascript:;">Dashboard</a> -->
+      <a class="navbar-brand" href="javascript:;">Dashboard</a>
     </div>
     <div class="navbar-toggler">
 
