--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -113,10 +113,20 @@
             <td class="text-right">{{ product.price }}</td>
             <td class="text-right">{{ product.featured }}</td>
             <td class="text-right">{{ product.active }}</td>
-            <td></td>
+            <td>
+              <div class="btn-group">
+                <button class="btn btn-info">
+                  <i class="material-icons">edit</i>
+                </button>
+                <button class="btn btn-danger pull-right" (click)="showDialog(product.id)">
+                  <i class="material-icons">delete</i>
+                </button>
+              </div>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 </div>
+<app-confirm-dialog></app-confirm-dialog>
