Product-list create button with routing

--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -39,6 +39,7 @@
     </div>
   </div>
   <div class="col-12">
+    <button class="btn btn-primary w-100" [routerLink]="'0'">Create Product</button>
     <div class="table-responsive">
       <table class="table table-striped table-sm table-product">
         <thead class="thead-dark text-center">
