--- a/src/app/pages/bill-list/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list/bill-list.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   <div class="row">
       <h3>Bills</h3>
+      <!-- Search/Filter -->
       <div class="input-group no-border mt-2">
-        <select [(ngModel)]="filterKey" class="form-control">
+        <select [(ngModel)]="filterKey" class="form-control mr-1">
             <option *ngFor="let key of filterKeys" [value]="key">
                 {{ key }}
             </option>
         </select>
-        <input class="form-control searchInput py-1 my-1" #search type="text" value="" class="form-control"
+        <input class="form-control searchInput py-1 my-1 ml-1" #search type="text" value=""
             placeholder="Search..." [(ngModel)]="filterText">
         <button type="submit" class="btn btn-white btn-round btn-just-icon">
             <i class="material-icons">search</i>
@@ -15,14 +16,16 @@
         </button>
     </div>
       <!-- Create a new bill -->
+      <button type="button" class="btn btn-primary btn-lg btn-block"><i class="material-icons">post_add</i></button>
       <!-- Bill list (modify status: new to paid, delete: if state=new) -->
-      <table class="table table-striped">
+      <table class="table table-striped table-hover text-center">
           <thead>
             <tr>
               <th>#</th>
               <th>Order ID</th>
               <th>Amount</th>
               <th>Status</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -31,7 +34,16 @@
               <td>{{ bill.orderID }}</td>
               <td>{{ bill.amount }}</td>
               <td>{{ bill.status }}</td>
-              <td>modify / delete</td>
+              <td class="text-center">
+                <div class="btn-group">
+                  <button class="btn btn-info">
+                    <i class="material-icons">mode_edit</i>
+                  </button>
+                  <button class="btn btn-danger">
+                    <i class="material-icons">delete_forever</i>
+                  </button>
+                </div>
+              </td>
             </tr>
           </tbody>
       </table>
