--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,30 +1,101 @@
-<div class="container col-10 offset-1">
-  <h3 class="mb-3">Orders</h3>
-</div>
-
-<div class="input-group mb-3 col-10 offset-1">
-
-  <select [(ngModel)]="phraseKey" class="custom-select">
-    <option value="">find all</option>
-    <option *ngFor="let key of keyArray" [value]="key">
-      {{ key }}
-    </option>
-  </select>
-
-
-  <!-- Kereső mező -->
-  <div class="input-group-prepend">
-    <span class="input-group-text" id="basic-addon1"><i class="material-icons">filter_list</i></span>
+<div class="d-flex mb-3 col-10 offset-1">
+  <div class="col-md-3">
+    <select [(ngModel)]="phraseKey" class="custom-select">
+      <option value="">find all</option>
+      <option *ngFor="let key of keyArray" [value]="key">
+        {{ key }}
+      </option>
+    </select>
   </div>
+  <div class="input-group-prepend"></div>
   <input [(ngModel)]="txt" class="form-control" type="text" placeholder="search...">
   <button type="submit" class="btn btn-white btn-round btn-just-icon">
     <i class="material-icons">search</i>
   </button>
 </div>
 
+<div class="card">
+  <div class="card-header card-header-primary d-flex justify-content-between">
+    <div>
+      <h4 class="card-title ">Orders</h4>
+      <p class="card-category"> Order list is responsive :)</p>
+    </div>
+    <button type="submit" class="btn btn-white button">
+      <i class="material-icons">add</i>add new orders
+    </button>
+  </div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table">
+        <thead class="text-default text-center">
+          <tr>
+            <th class="text-center" (click)="onColumnSelect('id')">#
+              <i *ngIf="columnKey !== 'id'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="columnKey === 'id' && direction === 'asc'"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="columnKey === 'id' && direction === 'dsc'"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="text-center" (click)="onColumnSelect('customerID')">CustomerID
+              <i *ngIf="columnKey !== 'customerID'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="columnKey === 'customerID' && direction === 'asc'"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="columnKey === 'customerID' && direction === 'dsc'"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="text-center" (click)="onColumnSelect('productID')">ProductID
+              <i *ngIf="columnKey !== 'productID'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="columnKey === 'productID' && direction === 'asc'"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="columnKey === 'productID' && direction === 'dsc'"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="text-center" (click)="onColumnSelect('amount')">Amount
+              <i *ngIf="columnKey !== 'amount'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="columnKey === 'amount' && direction === 'asc'"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="columnKey === 'amount' && direction === 'dsc'"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="text-center" (click)="onColumnSelect('status')">Status
+              <i *ngIf="columnKey !== 'status'" class="material-icons align-text-bottom">indeterminate_check_box</i>
+              <i *ngIf="columnKey === 'status' && direction === 'asc'"
+                class="material-icons align-text-top">keyboard_arrow_down</i>
+              <i *ngIf="columnKey === 'status' && direction === 'dsc'"
+                class="material-icons align-text-bottom">keyboard_arrow_up</i>
+            </th>
+            <th class="text-center">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let order of orderList | async | orderFilter:txt:phraseKey | sorter:direction:columnKey">
+            <td class="text-center">{{ order.id }}</td>
+            <td class="text-center">{{ order.customerID }}</td>
+            <td class="text-center">{{ order.productID }}</td>
+            <td class="text-center">{{ order.amount }}</td>
+            <td class="text-center">{{ order.status }}</td>
+            <td class="text-center">
+              <div class="btn-group">
+                <button class="btn btn-info">
+                  <i class="material-icons">mode_edit</i>
+                </button>
+                <button class="btn btn-danger">
+                  <i class="material-icons">delete_forever</i>
+                </button>
+              </div>
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
 <div class="container col-10 offset-1">
-  <button type="button" class="btn btn-primary btn-lg btn-block"><i class="material-icons">post_add</i></button>
-  <table class="table thead-dark table-hover table-striped">
+  <button type="button" class="btn btn-primary btn-lg"><i class="material-icons">post_add</i></button>
+  <!-- <table class="table thead-dark table-hover table-striped">
     <thead class="thead-dark text-center">
       <tr>
         <th class="text-center" (click)="onColumnSelect('id')">#
@@ -85,5 +156,5 @@
       </tr>
 
     </tbody>
-  </table>
+  </table> -->
 </div>
