Customer-list-ready-Customer-editor-basic

--- a/src/app/pages/customer-list/customer-list.component.scss
+++ b/src/app/pages/customer-list/customer-list.component.scss
@@ -1,9 +1,83 @@
-table {
-  thead {
-    th:hover {
-      background-color: rgb(202, 202, 198);
-      cursor: pointer;
-      user-select: none;
+.div__filter{
+    @media screen and (max-width: 575px) {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
-  }
+    &--group{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        margin-left: auto;
+        @media screen and (max-width: 575px) {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    }
+    &--select{
+        margin: 0 1rem 0 1rem;
+        @media screen and (max-width: 575px) {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            margin-left: 0;
+            min-width: 100%;
+        }
+    }
+    &--searchInput{
+        @media screen and (max-width: 575px) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            padding-left: 0;
+            padding-right: 0;
+        }
+        @media screen and (min-width: 576px) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
+    }
 }
+
+.span__filter{
+    font-size: 1.25rem;
+    @media screen and (max-width: 900px) {
+        font-size: 1rem;
+    }
+}
+
+ .table__thead{
+     &--id{
+         min-width: 70px;
+     }
+     &--first_name{
+         min-width: 135px;
+     }
+     &--last_name{
+         min-width: 130px;
+     }
+     &--email{
+         min-width: 50px;
+     }
+     &--zip{
+         min-width: 70px;
+     }
+     &--country{
+         min-width: 110px;
+     }
+     &--city{
+         min-width: 100px;
+     }
+     &--address{
+         min-width: 130px;
+     }
+     &--notes{
+         min-width: 110px;
+     }
+     &--active{
+         min-width: 90px;
+     }
+ }
