--- a/src/app/common/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/common/confirm-dialog/confirm-dialog.component.html
@@ -1,25 +1,15 @@
 <div *ngIf="message" class="modal" tabindex="-1" role="dialog" style="display:block!important">
-  <div class="modal-dialog custom-alert" role="document">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-
-      <div *ngIf="message?.type == 'confirm'" class="modal-body">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="text-center confirm-message">{{message.text}}</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="confirm-button">
-              <a class="mr-2" (click)="message.yesFn()">
-                <button class="btn btn-yes">Yes</button>
-              </a>
-              <a (click)="message.noFn()">
-                <button class="btn btn-no">No</button>
-              </a>
-            </p>
-          </div>
-        </div>
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Delete</h5>
+      </div>
+      <div class="modal-body" *ngIf="message?.type == 'confirm'">
+        <p>{{message.text}}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="message.yesFn()">Yes</button>
+        <button type="button" class="btn btn-secondary" (click)="message.noFn()" data-dismiss="modal">No</button>
       </div>
     </div>
   </div>
