--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+<nav class="navbar-form navbar-expand-lg navbar-transparent navbar-absolute bg-light fixed-top ">
   <div class="container-fluid navbar-toggler">
     <div class="navbar-wrapper">
       <a class="navbar-brand" href="javascript:;">Dashboard</a>
