navbar + customer editor

--- a/src/app/pages/customer-edit/customer-edit.component.scss
+++ b/src/app/pages/customer-edit/customer-edit.component.scss
@@ -1,3 +1,11 @@
-.h4__address{
-    font-weight: 400;
+.h4__address {
+  font-weight: 400;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
 }
