--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,41 +1,17 @@
 <!-- Navbar -->
-<nav class="navbar-form navbar-expand-lg navbar-transparent navbar-absolute bg-light fixed-top ">
-  <div class="container-fluid navbar-toggler">
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+  <div class="container-fluid">
     <div class="navbar-wrapper">
       <a class="navbar-brand" href="javascript:;">Dashboard</a>
     </div>
-    <div class="navbar-toggler">
-
-      <ul class="nav nav-pills justify-content-end">
-        <li class="nav-item ">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/">
-            <i class="material-icons">dashboard</i>
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-            routerLink="/customers">
-            <i class="material-icons">person</i>
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/products">
-            <i class="material-icons">theaters</i>
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/orders">
-            <i class="material-icons">shopping_cart</i>
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/bills">
-            <i class="material-icons">paid</i>
-          </a>
-        </li>
-
-      </ul>
-    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end"></div>
   </div>
 </nav>
 <!-- End Navbar -->
