--- a/src/app/pages/bill-list/bill-list.component.scss
+++ b/src/app/pages/bill-list/bill-list.component.scss
@@ -1,9 +1,17 @@
 .input-group {
     &-append {
-        transition: all 0.5s ease;
+        opacity: 100%;
+        animation-name: appear;
+        animation-duration: 4s;
     }
 
     &-text {
         font-size: 18px;
     }
 }
+
+@keyframes appear {
+    0% {opacity: 50%;}
+    50% {opacity: 750%;}
+    100% {opacity: 100%;}
+  }
